@@ -16,7 +16,7 @@
       <cucumber.version>7.12.0</cucumber.version>
       <selenium.version>4.11.0</selenium.version>
        <apache.common.version>2.4</apache.common.version>
-      <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
+      <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
       <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
       <maven.compiler.source.version>11</maven.compiler.source.version>
       <maven.compiler.target.version>11</maven.compiler.target.version>
@@ -58,17 +58,12 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-    <dependency>
-      <groupId>com.aventstack</groupId>
-      <artifactId>extentreports</artifactId>
-      <version>5.0.9</version>
-    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>7.1.0</version>
+      <version>7.7.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -86,6 +81,15 @@
       <artifactId>extent-excel-report</artifactId>
       <version>1.3.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
@@ -97,6 +101,9 @@
         <configuration>
           <source>${maven.compiler.source.version}</source>
           <target>${maven.compiler.target.version}</target>
+          <compilerArgs>
+            <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -105,8 +112,11 @@
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>src/test/java/resources/testng.xml</suiteXmlFile>
+            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+
+            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+
         </configuration>
       </plugin>
     </plugins>
